Header margin fixed on mobile and desktop

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -22,7 +22,7 @@
         }  
     }
     &__sell-more{
-        padding: 6.2em 1em 0 1em;
+        margin: 6.2em 1em 0 1em;
         text-align: center;
         position: relative;
         &__title{
@@ -37,7 +37,8 @@
             font-weight: 400;
             font-size: 1rem;
             line-height: 1.4rem;
-            padding: 1.5em 1.5em 2.5em 1.5em;
+            margin: 1.5em auto 2.5em auto;
+            width: 70%;
         }
         &__button{
             font-family: "Open Sans", sans-serif;
@@ -53,7 +54,7 @@
         }
     }
     &__image-container{
-        padding-top: 1em;
+        margin-top: 1em;
         &__laptop-image{
             position: relative;
             left: 50%;
