--- a/sass/styles.css
+++ b/sass/styles.css
@@ -40,7 +40,7 @@ html, body {
   display: none;
 }
 .header__sell-more {
-  padding: 6.2em 1em 0 1em;
+  margin: 6.2em 1em 0 1em;
   text-align: center;
   position: relative;
 }
@@ -56,7 +56,8 @@ html, body {
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.4rem;
-  padding: 1.5em 1.5em 2.5em 1.5em;
+  margin: 1.5em auto 2.5em auto;
+  width: 70%;
 }
 .header__sell-more__button {
   font-family: "Open Sans", sans-serif;
@@ -71,7 +72,7 @@ html, body {
   padding: 1.3em 5.4em;
 }
 .header__image-container {
-  padding-top: 1em;
+  margin-top: 1em;
 }
 .header__image-container__laptop-image {
   position: relative;
